# editor

./: Cargo.toml  LICENSE
src/: main.rs
src/bridge/: character.rs  errors.rs  grid_line.rs  mod.rs
src/ui/: mod.rs
