[package]
name = "editor"
version = "0.1.0"
authors = ["Arvinder Dhanoa <ArvinderDhan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio="0.2.21"
nvim-rs={features=["use_tokio"],git="https://github.com/KillTheMule/nvim-rs.git"}
iced = {version = "0.1",features = ["canvas"]}
