[package]
name = "editor"
version = "0.1.0"
authors = ["Arvinder Dhanoa <ArvinderDhan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.1.1",features = ["tokio","canvas"]}
iced_native = {version="0.2.2"}
async-trait="0.1"
rmpv = "0.4.4"
futures = "0.3.5"
nvim-rs = {git = "https://github.com/KillTheMule/nvim-rs.git", features=["use_tokio"]}
tokio = "0.2.21"
async-mutex = "1.1.5"
